# lady-claude

./: .gitignore  README.md  pyproject.toml  samconfig.toml  template.yaml
documents/: architecture.drawio  ask-architecture.md  connpass-architecture.md  garbage-architecture.md  minecraft-architecture.md  recipe-architecture.md
src/: requirements.txt
src/lady_claude/common/: connpass.py  discord.py  faiss.py  util.py
src/lady_claude/common/ai/: lady_claude.py
src/lady_claude/common/aws/: bedrock.py  ec2.py  s3.py  ssm.py
src/lady_claude/common/event/: discord.py  lady_claude.py
src/lady_claude/function/api/post/: function.py
src/lady_claude/function/worker/notification/garbage/: function.py
src/lady_claude/function/worker/notify_service/connpass/: function.py
src/lady_claude/function/worker/notify_service/garbage/: function.py
src/lady_claude/function/worker/reply/ask/: function.py
src/lady_claude/function/worker/reply/minecraft/: function.py
src/lady_claude/function/worker/reply/recipe/: function.py
src/lady_claude/function/worker/reply_service/ask/: function.py
src/lady_claude/function/worker/reply_service/minecraft/: function.py
src/lady_claude/function/worker/reply_service/recipe/: function.py
src/penguinator/common/aws/: bedrock.py  sns.py
src/penguinator/common/event/: discord.py  penguinator.py
src/penguinator/function/api/post/: function.py
src/penguinator/function/worker/reply_service/ask/: function.py
tools/: ask_cloude.py  create_index.py  register_command.py
