[project]
name = "lady-claude"
version = "1.0.0"
description = "A Serverless Discord Bot running on AWS, made just for me."
authors = [
    { name = "tosuri13", email = "85057870+tosuri13@users.noreply.github.com" }
]
dependencies = [
    "boto3>=1.35.76",
    "requests>=2.32.3",
    "pynacl>=1.5.0",
    "beautifulsoup4>=4.12.3",
    "numpy>=2.1.3",
    "faiss-cpu>=1.9.0.post1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lady_claude"]
