[project]
name = "lady-claude"
version = "0.1.0"
description = "A Serverless Discord Bot running on AWS, made just for me."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "boto3>=1.36.11",
    "faiss-cpu==1.9.0",
    "numpy==2.2.6",
    "pynacl>=1.5.0",
    "requests>=2.32.3",
]

[tool.ruff.lint]
unfixable = [
    "F401", # unused import
    "F841", # unused variable
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lady_claude"]

[tool.taskipy.tasks]
build = "uv pip compile pyproject.toml > src/requirements.txt && sam build"
deploy = "sam deploy"
